--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0022)http://www.csea.cz/ru/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     
 
     <title></title>
     <link href="css/site-518af3cb.css" rel="stylesheet">
-    <script src="js/all-b9cf35c2.js"></script><style type="text/css"></style>
+    <script src="js/all-b9cf35c2.js"></script>
 
   </head>
 
@@ -14,12 +16,12 @@
     
 <!-- NAVIGACE -->
 <ul class="navigationMenu">
-  <li class="nocufon active" data-slide="1"><a data-slide="1" href="">Покупка и продажа самолетов</a></li>
-  <li class="nocufon" data-slide="2"><a data-slide="2" href="">Услуги в области авиации</a></li>
-  <li class="nocufon" data-slide="3"><a data-slide="3" href="">Консалтинг</a></li>
-  <li class="nocufon" data-slide="4"><a data-slide="4" href="">Логистика</a></li>
-  <li class="nocufon" data-slide="5"><a data-slide="5" href="">Сертификаты</a></li>
-  <li class="nocufon" data-slide="6"><a data-slide="6" href="">Клиенты</a></li>
+  <li class="nocufon active" data-slide="1"><a data-slide="1" href="">О компании</a></li>
+  <li class="nocufon" data-slide="2"><a data-slide="2" href="">Консалтинг</a></li>
+  <li class="nocufon" data-slide="3"><a data-slide="3" href="">Логистика</a></li>
+  <li class="nocufon" data-slide="4"><a data-slide="4" href="">Услуги в области авиации</a></li>
+  <li class="nocufon" data-slide="5"><a data-slide="5" href="">Услуги в области бронетехники</a></li>
+  <li class="nocufon" data-slide="6"><a data-slide="6" href="">Лодки и морские судна</a></li>
   <li class="nocufon" data-slide="7"><a data-slide="7" href="">Контакты</a></li>
 </ul>
 <!-- LOGO -->
@@ -36,12 +38,9 @@
 <!-- SLIDE 1 -->
 
 <div class="slideContainer" data-slide="1">
-<div class="slideContainerHeadline" id="slide1">
+<div class="slideContainerHeadline first" id="slide1">
 <h2 class="nocufon">Компания Československá exportní осуществляет посредническую деятельность в области продажи самолетов и авиатехники с 1995 года.</h2>
 </div>
-
-<p>На протяжении последних 17-ти лет при нашем участии реализовано сотрудничество в более, чем <a href="http://www.csea.cz/ru/#slide6">30-ти странах</a>. Предлагаем посреднические услуги по покупке и продаже как новой, так и подержанной авиатехники. Специализируемся главным образом на летательных аппаратах следующих типов: Ан-26,<br>
-Ан-32, Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154.</p>
 
 <div class="slideImage" id="slideOneImage" style="background-position: 0px 0px;"></div>
 </div>
@@ -52,9 +51,9 @@
 <h2 class="nocufon">Предлагаем полный комплекс услуг собственникам<br>
 и владельцам авиатехники.</h2>
 </div>
-
-<p>Благодаря долговременным контактам с нашими партнерами в данной области, мы способны организовать для Вас: осмотр, плановый и капитальный ремонт крыльев, силовых агрегатов и других составных частей воздушных судов. Проведение программ по модернизации и продлению срока службы, инспекторский и технический надзор c выездом технической группы. Мы сотрудничаем<br>
-с производителями и сертифицированными сервисными центрами и готовы предложить уникальный набор услуг, отвечающий потребностям конкретного клиента.</p>
+<p>
+magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
 
 <div class="slideImage" id="slideTwoImage">&nbsp;</div>
 </div>
@@ -65,8 +64,8 @@
 <h2 class="nocufon">Проводим консультирование при заключении международных контрактов в области авиации.</h2>
 </div>
 
-<p>В процессе выхода на иностранный рынок, компании вынуждены функционировать в условиях незнакомой бизнес среды. Благодаря нашему многолетнему опыту ведения бизнеса, на всех <a href="http://www.csea.cz/ru/#slide6">четырех континентах</a>, Ваш выход на международный рынок будет более легким и эффективным. Поможем Вам сориентироваться в особенностях законодательно-правовой базы, а также в проведении анализа рынка<br>
-и конкурентной среды, в налаживании необходимых бизнес контактов и знакомстве с местной социально-культурной сферой. Кроме того, предлагаем помощь по организации финансирования проектов в области авиатехники.</p>
+<p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
 
 <div class="slideImage" id="slideThreeImage">&nbsp;</div>
 </div>
@@ -78,9 +77,8 @@
 и вертолетов военной и гражданской авиации.</h2>
 </div>
 
-<p>Предлагаем к продаже запасные части для летательных аппаратов следующих типов: Ан-26, Ан-32,<br>
-Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154. Осуществляем выкуп запасных частей до<br>
-и после прохождения ими капитального ремонта.</p>
+<p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
 
 <div class="slideImage" id="slideFourImage">&nbsp;</div>
 </div>
@@ -90,8 +88,8 @@
 <div class="slideContainerHeadline" id="slide5">
 <h2 class="nocufon">Чехословацкая экспортная является обладателем следующих сертификатов.</h2>
 </div>
-
-<p class="certy"><a class="colorbox colorbox-insert-image" href="./ООО «Чехословацкая экспортная» - Обеспэечивает поставки самолетов и авиационной техники_files/certifikat-0e87fe70.jpg" title="сертификат"><img alt="сертификат" class="image-thumbnail" data-entity-type="" data-entity-uuid="" src="./ООО «Чехословацкая экспортная» - Обеспэечивает поставки самолетов и авиационной техники_files/certifikat-0e87fe70.jpg" title="сертификат" typeof="foaf:Image"></a><a class="colorbox colorbox-insert-image" href="./ООО «Чехословацкая экспортная» - Обеспэечивает поставки самолетов и авиационной техники_files/povoleni-5c9e5529.jpg" title="разрешать"><img alt="разрешать" class="image-thumbnail" data-entity-type="" data-entity-uuid="" src="./ООО «Чехословацкая экспортная» - Обеспэечивает поставки самолетов и авиационной техники_files/povoleni-5c9e5529.jpg" title="разрешать" typeof="foaf:Image"></a></p>
+<p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
 
 <div class="slideImage" id="slideFiveImage">&nbsp;</div>
 </div>
@@ -103,88 +101,9 @@
 с клиентами и партнерами четырех континентов.</h2>
 </div>
 
-<p>Выберите континент для перечня наших клиентов:</p>
+<p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
 
-<div id="mapa">
-<div id="overlay"><img alt="Mapa světa" data-entity-type="" data-entity-uuid="" id="world_map" src="./ООО «Чехословацкая экспортная» - Обеспэечивает поставки самолетов и авиационной техники_files/transparent-ae800a32.png" usemap="#m_world_map"><map id="m_world_map" name="m_world_map"><area alt="Evropa" class="evropa" coords="365,51,369,52,376,54,382,57,389,62,389,63,392,65,397,63,401,62,404,60,412,58,421,58,425,56,426,55,431,55,433,57,435,61,429,66,424,72,423,78,411,81,411,84,413,91,411,97,401,112,402,116,405,117,402,118,400,121,400,125,403,128,384,121,381,119,377,121,374,118,372,116,367,120,361,128,357,128,356,129,354,135,356,137,347,133,344,133,336,125,330,121,327,122,326,123,321,123,310,137,303,139,298,137,298,125,308,124,311,123,313,119,310,115,306,113,310,112,315,109,324,102,327,100,330,99,329,92,328,89,326,88,324,79,333,72,348,56,353,53,360,51,365,51,365,51" href="http://www.csea.cz/ru/#slide6" shape="poly"> <area alt="Asie" class="asie" coords="507,29,508,29,510,31,512,31,516,30,520,30,523,33,522,33,521,34,523,35,521,36,522,39,528,42,538,45,549,42,552,47,555,52,557,50,559,49,568,51,571,48,575,45,578,45,581,48,585,49,588,48,590,49,595,50,605,51,607,51,608,56,624,56,629,55,638,55,648,58,653,61,656,66,658,64,664,67,660,68,659,71,652,68,649,65,641,71,644,77,641,76,628,82,616,83,613,85,612,89,613,90,614,92,612,96,609,99,605,102,604,106,602,97,600,87,599,84,599,86,590,84,582,84,576,86,563,97,564,100,568,102,572,100,574,103,571,114,562,124,557,125,552,128,549,133,552,138,552,142,548,143,541,141,533,143,536,149,538,155,536,158,532,162,524,167,514,169,510,170,508,175,511,180,515,186,512,189,509,191,502,189,497,190,493,183,489,180,485,171,481,166,480,169,475,169,468,174,461,182,459,187,458,194,456,193,450,180,448,174,448,168,445,171,444,168,441,164,437,162,432,161,427,163,423,168,417,175,410,179,395,186,393,179,384,165,380,157,378,151,381,145,381,140,375,138,370,138,365,137,363,133,369,131,376,129,386,131,388,131,390,129,391,126,403,129,403,126,401,122,405,120,407,118,408,117,404,115,401,113,408,104,412,98,415,93,414,84,412,82,411,82,424,81,425,71,432,66,437,61,438,51,440,47,442,45,448,46,455,45,463,43,474,41,475,37,478,35,486,34,493,33,501,31,502,28,504,26,508,27,507,29,507,29" href="http://www.csea.cz/ru/#slide6" shape="poly"> <area alt="Afrika" class="afrika" coords="333,146,351,154,352,151,355,149,368,153,370,152,372,151,378,152,378,156,377,163,379,168,383,176,388,182,393,189,394,191,398,192,408,190,408,192,402,202,392,211,387,216,386,221,389,235,388,238,386,240,378,248,378,256,374,259,373,264,365,273,352,277,349,276,346,268,343,261,341,252,337,242,341,231,336,219,332,212,334,206,331,201,328,200,326,201,323,199,320,198,300,202,296,199,291,194,285,187,284,183,284,170,286,164,291,158,298,149,304,143,310,142,317,141,325,141,333,139,333,146,333,146" href="http://www.csea.cz/ru/#slide6" shape="poly"> <area alt="Amerika" class="amerika" coords="188,191,194,191,201,194,208,199,211,199,216,201,221,208,222,210,225,212,228,213,231,215,239,217,247,220,248,223,247,226,244,229,241,234,238,243,235,252,223,258,222,264,216,271,212,277,208,278,208,281,207,283,204,284,199,285,195,290,191,298,191,305,188,313,187,318,189,323,184,321,179,317,177,308,177,303,178,295,178,290,178,287,180,279,182,271,185,249,183,244,181,242,174,237,164,219,165,213,172,202,172,196,175,191,180,189,188,191,188,191" href="http://www.csea.cz/ru/#slide6" shape="poly"> <area alt="Amerika" class="amerika" coords="143,53,150,58,154,57,158,56,164,59,164,63,150,70,142,77,139,80,139,85,141,90,146,93,152,95,157,97,162,98,162,102,166,108,170,108,169,100,171,96,174,93,172,89,170,88,172,83,171,79,175,78,179,79,183,83,185,89,190,90,192,88,195,85,199,94,203,97,206,100,207,102,211,105,204,108,195,113,194,116,196,120,187,122,182,129,172,136,173,140,171,143,168,146,164,148,163,152,166,163,163,159,162,156,160,154,157,154,155,153,153,152,147,154,141,153,136,156,133,161,133,167,136,174,142,178,149,172,153,172,150,182,160,183,159,189,160,192,163,195,157,190,153,186,140,180,134,180,127,178,123,175,113,163,105,150,100,148,96,145,91,140,90,138,88,135,86,128,86,124,86,117,79,106,71,95,64,88,59,86,57,84,42,81,37,80,32,82,29,87,25,90,22,90,15,85,9,80,12,74,11,71,8,71,7,68,9,64,9,61,8,60,25,51,49,55,67,57,73,56,79,54,103,60,113,63,134,62,135,60,136,56,137,51,139,49,143,53,143,53" href="http://www.csea.cz/ru/#slide6" shape="poly"></map></div>
-
-<div id="amerika">&nbsp;</div>
-
-<div class="bubble" id="amerikaBubble">
-<div class="mapPointerReverze">&nbsp;</div>
-
-<div class="dark">
-<h3>Америка:</h3>
-
-<ul>
-  <li>Боливия</li>
-  <li>Бразилия</li>
-  <li>Канада</li>
-  <li>Коломбия</li>
-  <li>Мексика</li>
-  <li>Никарагуа</li>
-  <li>Перу</li>
-  <li>Соединенные Штаты Америки</li>
-  <li>Эквадор</li>
-</ul>
-</div>
-</div>
-
-<div id="asie">&nbsp;</div>
-
-<div class="bubble" id="asieBubble">
-<div class="mapPointerReverze">&nbsp;</div>
-
-<div class="dark">
-<h3>Азия:</h3>
-
-<ul>
-  <li>Азербаиджан</li>
-  <li>Армения</li>
-  <li>Бангладеш</li>
-  <li>Шри-Ланка</li>
-</ul>
-</div>
-</div>
-
-<div id="afrika">&nbsp;</div>
-
-<div class="bubble" id="afrikaBubble">
-<div class="mapPointerUp">&nbsp;</div>
-
-<div class="dark">
-<h3>Африка:</h3>
-
-<ul>
-  <li>Бенин</li>
-  <li>Нигерия</li>
-  <li>Эфиопия</li>
-</ul>
-</div>
-</div>
-
-<div id="evropa">&nbsp;</div>
-
-<div class="bubble" id="evropaBubble">
-<div class="dark">
-<h3>Европа:</h3>
-
-<ul>
-  <li>Англия</li>
-  <li>Болгария</li>
-  <li>Венгрия</li>
-  <li>Германия</li>
-  <li>Польша</li>
-  <li>Россия</li>
-  <li>Словакия</li>
-  <li>Украина</li>
-  <li>Франция</li>
-  <li>Чешская Республика</li>
-</ul>
-</div>
-
-<div class="mapPointer">&nbsp;</div>
-</div>
 </div>
 
 <div class="slideImage" id="slideSixImage">&nbsp;</div>
@@ -197,16 +116,14 @@
 с удовольствием ответим.</h2>
 </div>
 
-<div class="contact"><span class="kontakt">Ceskoslovenska Exportni, s. r. o.<br>
-Jenecska 223/26<br>
-Prague 6 - Liboc<br>
-Czech Republic</span><span class="kontakt">Tel.: +420 220 562 022<br>
-Mon - Fri: 8:30-17:00 CET<br>
-E-mail: <a href="mailto:info%40csea.cz">info@csea.cz</a></span></div>
+<p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
 
 <div class="slideImage" id="slideSevenImage">&nbsp;</div>
 </div>
 
   
 
-<div id="window-resizer-tooltip" style="display: block;"><a href="http://www.csea.cz/ru/#" title="Edit settings"></a><span class="tooltipTitle">Window size: </span><span class="tooltipWidth" id="winWidth">1366</span> x <span class="tooltipHeight" id="winHeight">728</span><br><span class="tooltipTitle">Viewport size: </span><span class="tooltipWidth" id="vpWidth">1366</span> x <span class="tooltipHeight" id="vpHeight">599</span></div></body></html>
+</div>
+</body>
+</html>
