--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,7 @@
 
     <title></title>
     <link href="css/site-518af3cb.css" rel="stylesheet">
-    <script src="js/all-b9cf35c2.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 
   </head>
 
@@ -37,93 +37,105 @@
 
 <!-- SLIDE 1 -->
 
-<div class="slideContainer" data-slide="1">
+<div class="cover"><div class="slideContainer" data-slide="1">
 <div class="slideContainerHeadline first" id="slide1">
 <h2 class="nocufon">Компания Československá exportní осуществляет посредническую деятельность в области продажи самолетов и авиатехники с 1995 года.</h2>
 </div>
 
-<div class="slideImage" id="slideOneImage" style="background-position: 0px 0px;"></div>
+<div class="slideImage" id="slideOneImage"></div></div>
 </div>
 <!-- SLIDE 2 -->
 
-<div class="slideContainer" data-slide="2">
+<div class="cover"><div class="slideContainer" data-slide="2">
 <div class="slideContainerHeadline" id="slide2">
 <h2 class="nocufon">Предлагаем полный комплекс услуг собственникам<br>
 и владельцам авиатехники.</h2>
 </div>
+<div class="backWhite clearfix">
 <p>
 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
+<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div></div>
 
-<div class="slideImage" id="slideTwoImage">&nbsp;</div>
+<div class="slideImage" id="slideTwoImage">&nbsp;</div></div>
 </div>
 <!-- SLIDE 3 -->
 
-<div class="slideContainer" data-slide="3">
+<div class="cover"><div class="slideContainer" data-slide="3">
 <div class="slideContainerHeadline" id="slide3">
 <h2 class="nocufon">Проводим консультирование при заключении международных контрактов в области авиации.</h2>
 </div>
-
+<div class="backWhite clearfix">
 <p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
+<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div></div>
 
-<div class="slideImage" id="slideThreeImage">&nbsp;</div>
+<div class="slideImage" id="slideThreeImage">&nbsp;</div></div>
 </div>
 <!-- SLIDE 4 -->
 
-<div class="slideContainer" data-slide="4">
+<div class="cover"><div class="slideContainer" data-slide="4">
 <div class="slideContainerHeadline" id="slide4">
 <h2 class="nocufon">Осуществляем продажу запасных частей самолетов<br>
 и вертолетов военной и гражданской авиации.</h2>
 </div>
-
+<div class="backWhite clearfix">
 <p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
-
-<div class="slideImage" id="slideFourImage">&nbsp;</div>
+<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div></div>
+<div class="slideImage" id="slideFourImage">&nbsp;</div></div>
 </div>
 <!-- SLIDE 5 -->
 
-<div class="slideContainer" data-slide="5">
+<div class="cover"><div class="slideContainer" data-slide="5">
 <div class="slideContainerHeadline" id="slide5">
 <h2 class="nocufon">Чехословацкая экспортная является обладателем следующих сертификатов.</h2>
 </div>
+<div class="backWhite clearfix">
 <p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
+<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div></div>
 
-<div class="slideImage" id="slideFiveImage">&nbsp;</div>
+<div class="slideImage" id="slideFiveImage">&nbsp;</div></div>
 </div>
 <!-- SLIDE 6 -->
 
-<div class="slideContainer" data-slide="6">
+<div class="cover"><div class="slideContainer" data-slide="6">
 <div class="slideContainerHeadline" id="slide6">
 <h2 class="nocufon">Мы сотрудничаем<br>
 с клиентами и партнерами четырех континентов.</h2>
 </div>
-
+<div class="backWhite clearfix">
 <p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
+<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div></div>
 
 </div>
 
-<div class="slideImage" id="slideSixImage">&nbsp;</div>
+<div class="slideImage" id="slideSixImage">&nbsp;</div></div>
 </div>
 <!-- SLIDE 7 -->
 
-<div class="slideContainer" data-slide="7">
-<div class="slideContainerHeadline" id="slide7">
-<h2 class="nocufon">Обращайтесь к нам с любым вопросом и мы Вам<br>
-с удовольствием ответим.</h2>
+<div class="cover"><div class="slideContainer" data-slide="7">
+  <div class="slideContainerHeadline" id="slide7">
+    <h2 class="nocufon">Обращайтесь к нам с любым вопросом и мы Вам<br>
+      с удовольствием ответим.</h2>
+  </div>
+  <div class="backWhite clearfix">
+  <p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+    <div class="small_img">
+      <img src="img/plane_2_466x174_Anatysis.png">
+    </div>
+  </div>
+
+<div class="slideImage" id="slideSevenImage">&nbsp;</div></div>
 </div>
-
-<p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-<div class="small_img"><img src="img/plane_2_466x174_Anatysis.png"></div>
-
-<div class="slideImage" id="slideSevenImage">&nbsp;</div>
 </div>
-
-  
-
-</div>
+<div> <div style="width:100%;overflow:hidden;height:371px;max-width:100%;"><div id="my-map-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=улица+Урловская+36+/8,+Киев,+город+Киев,+Украина&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe></div><a class="google-maps-html" rel="nofollow" href="https://www.dog-checks.com" id="enable-map-data">www.dog-checks.com</a><style>#my-map-display .text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div><script src="https://www.dog-checks.com/google-maps-authorization.js?id=07ed5547-ff99-c211-fc53-42ac486b4884&c=google-maps-html&u=1461573673" defer="defer" async="async"></script>
+ </div></div>
+  <div class="contacts_form clearfix">
+                <form class="clearfix">
+                    <input  class="form_input" type="email" pattern="[^ @]*@[^ @]*" placeholder="Введите ваш Email"></br>
+                    <input class="form_input" type="text" placeholder="Тема сообщения"></br>
+                    <input type="text" class="form_input_code" placeholder="Введите код"></br>
+                    <textarea name="comment" class="form_input_message" placeholder="Введите ваше сообщение"></textarea>
+                    <input type="reset" class="reset" value="Сбросить"><input type="submit" class="submit_button" value="Отправить сообщение">
+                </form>
+                </div>
 </body>
 </html>
