--- a/site/index.html
+++ b/site/index.html
@@ -110,8 +110,8 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 <div class="slideImage" id="slideSixImage">&nbsp;</div></div>
 </div>
 <!-- SLIDE 7 -->
-
-<div class="cover"><div class="slideContainer" data-slide="7">
+<div class="cover">
+<div class="slideContainer" data-slide="7">
   <div class="slideContainerHeadline" id="slide7">
     <h2 class="nocufon">Обращайтесь к нам с любым вопросом и мы Вам<br>
       с удовольствием ответим.</h2>
@@ -124,18 +124,41 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
   </div>
 
 <div class="slideImage" id="slideSevenImage">&nbsp;</div></div>
+<div class="slide_map"> 
+  <div style="width:100%;overflow:hidden;height:371px;max-width:100%;"><div id="my-map-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=улица+Урловская+36+/8,+Киев,+город+Киев,+Украина&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe></div><a class="google-maps-html" rel="nofollow" href="https://www.dog-checks.com" id="enable-map-data">www.dog-checks.com</a><style>#my-map-display .text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div><script src="https://www.dog-checks.com/google-maps-authorization.js?id=07ed5547-ff99-c211-fc53-42ac486b4884&c=google-maps-html&u=1461573673" defer="defer" async="async"></script></div>
+
+ <div class="last_slide"> 
+
+ <div class="slideContainer">
+  <div class="slideContainerHeadline"s>
+    <h2 class="nocufon">Обращайтесь к нам с любым вопросом и мы Вам<br>
+      с удовольствием ответим.</h2>
+  </div>
+  <div class="backWhite clearfix">
+  <p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+    <div class="small_img">
+      <img src="img/plane_2_466x174_Anatysis.png">
+    </div> 
+    <div class="contacts_form clearfix">
+      <form class="clearfix">
+          <div class="clearfix">
+            <input  class="form_input name_input" type="text"  placeholder="Введите ваше имя">
+            <input  class="form_input email_input" type="email" pattern="[^ @]*@[^ @]*" placeholder="Введите ваш Email"></br>
+          </div>
+          <input class="form_input" type="text" placeholder="Введите название вашей компании"></br>
+          <textarea name="comment" class="form_input_message" placeholder="Введите ваше сообщение"></textarea>
+          <input type="text" class="form_input_code" placeholder="Введите код"></br>
+          <input type="reset" class="reset" value="Сбросить"><input type="submit" class="submit_button" value="Отправить сообщение">
+      </form>
+  </div>
+  </div>
+ 
+
+</div><footer class="clearfix">
+  <div class="copyright"><a href="http://web-intellectus.com/">© Intellectus Studio. All right reserved 2016.</a></div>
+</footer>
 </div>
 </div>
-<div> <div style="width:100%;overflow:hidden;height:371px;max-width:100%;"><div id="my-map-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=улица+Урловская+36+/8,+Киев,+город+Киев,+Украина&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe></div><a class="google-maps-html" rel="nofollow" href="https://www.dog-checks.com" id="enable-map-data">www.dog-checks.com</a><style>#my-map-display .text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div><script src="https://www.dog-checks.com/google-maps-authorization.js?id=07ed5547-ff99-c211-fc53-42ac486b4884&c=google-maps-html&u=1461573673" defer="defer" async="async"></script>
- </div></div>
-  <div class="contacts_form clearfix">
-                <form class="clearfix">
-                    <input  class="form_input" type="email" pattern="[^ @]*@[^ @]*" placeholder="Введите ваш Email"></br>
-                    <input class="form_input" type="text" placeholder="Тема сообщения"></br>
-                    <input type="text" class="form_input_code" placeholder="Введите код"></br>
-                    <textarea name="comment" class="form_input_message" placeholder="Введите ваше сообщение"></textarea>
-                    <input type="reset" class="reset" value="Сбросить"><input type="submit" class="submit_button" value="Отправить сообщение">
-                </form>
-                </div>
+
 </body>
 </html>
