--- a/site/index.html
+++ b/site/index.html
@@ -37,7 +37,7 @@
 
 <!-- SLIDE 1 -->
 
-<div class="cover"><div class="slideContainer" data-slide="1">
+<div class="cover cover_first"><div class="slideContainer" data-slide="1">
 <div class="slideContainerHeadline first" id="slide1">
 <h2 class="nocufon">Компания Československá exportní осуществляет посредническую деятельность в области продажи самолетов и авиатехники с 1995 года.</h2>
 </div>
@@ -46,7 +46,7 @@
 </div>
 <!-- SLIDE 2 -->
 
-<div class="cover"><div class="slideContainer" data-slide="2">
+<div class="cover cover_second"><div class="slideContainer" data-slide="2">
 <div class="slideContainerHeadline" id="slide2">
 <h2 class="nocufon">Предлагаем полный комплекс услуг собственникам<br>
 и владельцам авиатехники.</h2>
@@ -60,7 +60,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 </div>
 <!-- SLIDE 3 -->
 
-<div class="cover"><div class="slideContainer" data-slide="3">
+<div class="cover cover_third"><div class="slideContainer" data-slide="3">
 <div class="slideContainerHeadline" id="slide3">
 <h2 class="nocufon">Проводим консультирование при заключении международных контрактов в области авиации.</h2>
 </div>
@@ -72,7 +72,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 </div>
 <!-- SLIDE 4 -->
 
-<div class="cover"><div class="slideContainer" data-slide="4">
+<div class="cover cover_fourth"><div class="slideContainer" data-slide="4">
 <div class="slideContainerHeadline" id="slide4">
 <h2 class="nocufon">Осуществляем продажу запасных частей самолетов<br>
 и вертолетов военной и гражданской авиации.</h2>
@@ -84,7 +84,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 </div>
 <!-- SLIDE 5 -->
 
-<div class="cover"><div class="slideContainer" data-slide="5">
+<div class="cover cover_fifth"><div class="slideContainer" data-slide="5">
 <div class="slideContainerHeadline" id="slide5">
 <h2 class="nocufon">Чехословацкая экспортная является обладателем следующих сертификатов.</h2>
 </div>
@@ -96,7 +96,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 </div>
 <!-- SLIDE 6 -->
 
-<div class="cover"><div class="slideContainer" data-slide="6">
+<div class="cover cover_six"><div class="slideContainer" data-slide="6">
 <div class="slideContainerHeadline" id="slide6">
 <h2 class="nocufon">Мы сотрудничаем<br>
 с клиентами и партнерами четырех континентов.</h2>
@@ -110,7 +110,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 <div class="slideImage" id="slideSixImage">&nbsp;</div></div>
 </div>
 <!-- SLIDE 7 -->
-<div class="cover">
+<div class="cover cover_seventh">
 <div class="slideContainer" data-slide="7">
   <div class="slideContainerHeadline" id="slide7">
     <h2 class="nocufon">Обращайтесь к нам с любым вопросом и мы Вам<br>
